--- a/css/app.css
+++ b/css/app.css
@@ -39,20 +39,20 @@ body {
     z-index: 1055 !important;
     margin-bottom: 20px;
     background-color: #102C57;
-    color: #EADBC8;
+    color: #F3D0D7;
     /* Add margin bottom */
 }
 
 .custom-button {
     background-color: #102C57;
     border-color: #102C57;
-    color: #EADBC8;
+    color: #F3D0D7;
 }
 
 .custom-button:hover {
     background-color: #102C57;
     border-color: #102C57;
-    color: #EADBC8;
+    color: #F3D0D7;
     opacity: 80%;
 }
 
@@ -133,6 +133,7 @@ body {
 }
 
 .animate-love {
+    color: #F3D0D7;
     animation: love 5s ease-in-out infinite;
 }
 
@@ -147,15 +148,15 @@ footer {
 }
 
 .bg-theme-primary {
-    background-color: #FEFAF6;
+    background-color: #FFEFEF;
 }
 
 .bg-theme-secondary {
-    background-color: #EADBC8;
+    background-color: #F3D0D7;
 }
 
 .bg-theme-secondary {
-    background-color: #EADBC8;
+    background-color: #F3D0D7;
 }
 
 .color-theme-white {
@@ -168,8 +169,8 @@ footer {
 }
 
 .color-theme-secondary {
-    color: #FEFAF6;
-    background-color: #EADBC8;
+    color: #FFEFEF;
+    background-color: #F3D0D7;
 }
 
 .navbar {
@@ -274,7 +275,7 @@ footer {
     border-radius: 1rem;
     width: 100%;
     margin: 0 auto;
-    background-color: #FEFAF6;
+    background-color: #FFEFEF;
     /* Center the card-comment horizontally */
 }
 
@@ -304,7 +305,7 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(234, 219, 200, 0.8);
+    background: rgba(234, 200, 200, 0.8);
     /* background: rgba(0, 0, 0, 0.7); */
     /* Semi-transparent overlay */
     z-index: 1;
@@ -397,7 +398,7 @@ footer {
 /* COMMENT CARD */
 
 .list-container {
-    background-color: #fff;
+    background-color: #FFEFEF;
     border: 1px solid #ddd;
     border-radius: 16px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -420,7 +421,7 @@ footer {
     border-radius: 16px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 16px;
-    border: 1px solid #EADBC8;
+    border: 1px solid #F3D0D7;
     border-radius: 1rem;
     width: 100%;
     margin: 0 auto;
